# light-speed-holdings

./: .gitignore  AGENTS.md  README.md  agent-list.txt  daily-check.ps1  mypy_output.txt  ollama-proxy.js  ruff_output.txt  setup_phase6.py
ai-company/: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DATA_RECONCILIATION_PLAN.md  Dockerfile  LICENSE  MILESTONES-DECK-SETUP.md  MILESTONES-DECK-SUMMARY.md  Makefile  README-milestones-deck.md  README.md  RECONCILIATION_PLAN.md  SCALABILITY_ASSESSMENT.md  SPRINT3-DELEGATION-SUMMARY.md  add_missing_agents.py  all_agents.txt  build_project.py  check_duplicates.py  company-registry.yaml  docker-compose.staging.yml  docker-compose.yml  fix-templates.ps1  full_agents_list.txt  generate-deck-python.bat  generate-deck-python.ps1  generate-deck.bat  generate-deck.ps1  one_click_fix.py  org_chart_executive.md  package.json  phase3_setup.py  project_tree.txt  pyproject.toml  requirements.txt  setup_files.py  setup_phase4.py  setup_phase5.py  (+3 more)
ai-company/.opencode/: audit  audit.jsonl  daily_briefing.md  dead_letter.json.bak  inbox.json  inbox.json.bak  opencode.json
ai-company/ai_development_constitution/: ai_development_supreme_propmt.md
ai-company/board/: board.yaml
ai-company/company/: agent-registry.json  agents.yaml  board.yaml  company.yaml  departments.yaml  executives.yaml  models.yaml  org-chart.md  specialists.yaml
ai-company/config/: company-registry.yaml  prometheus.staging.yml  routing.yaml  tool_allowlist.yaml
ai-company/data/: ai_company.db
ai-company/docs/: ACCEPTANCE-CRITERIA-PHASE1-2.md  AGENT-REGISTRY-TABLE.md  AI-SECURITY-ACTION-PLAN.md  AI-SECURITY-ASSESSMENT-2026-07-24.md  AI-SECURITY-ASSESSMENT-COMPLETE.md  AI-SECURITY-ASSESSMENT-DONE.md  AI-SECURITY-ASSESSMENT-FINAL.md  AI-SECURITY-CISO-BRIEFING.md  AI-SECURITY-DELIVERABLES-COMPLETE.md  AI-SECURITY-DELIVERABLES-SUMMARY.md  AI-SECURITY-EXECUTIVE-SUMMARY.md  AI-SECURITY-FINAL-REPORT.md  AI-SECURITY-FINAL-SUMMARY.md  AI-SECURITY-README.md  AI-SECURITY-SUMMARY.md  AI-SECURITY-THREAT-ASSESSMENT.md  API-REFERENCE.md  APPROVAL-CLI-COMMANDS.md  APPROVAL-DASHBOARD-UI.md  APPROVAL-UX-SPEC.md  ARCHITECTURE-GAPS.md  ARCHITECTURE.md  BACKEND_IMPLEMENTATION_PLAN.md  BACKLOG.md  BI_INFRASTRUCTURE_REPORT.md  BOARD-DIRECTIVES.md  BOARD-GOVERNANCE.md  CAIO-AI-STRATEGY-REPORT.md  CEO_DASHBOARD_ARCHITECTURE_ANALYSIS.md  COMPANY-CONSTITUTION.md  DASHBOARD_ARCHITECTURE.md  DECISION-FRAMEWORK.md  DEFERRAL_PROTOCOL.md  DEPLOYMENT-GUIDE.md  DEVELOPER-GUIDE.md  DEVOPS-PLAN.md  ECL.md  EXECUTIVE_DASHBOARD_V1_STRATEGIC_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION-ARCHITECTURE.md  (+49 more)
(+1515 files in other folders)
