[project]
name = "ai-company"
version = "0.1.0"
description = "AI Company powered by OpenCode"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Jack Mlusu" }
]

license = { text = "Proprietary — All Rights Reserved. Apache 2.0 at v1.0." }

dependencies = [
    "jinja2",
    "click",
    "rich",
    "pyyaml",
    "pydantic>=2.8",
    "networkx",
    "typer",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    # Security
    "cryptography>=42.0",
    # ML dependencies
    "sentence-transformers>=3.0",
    "scikit-learn>=1.5",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/light-speed-holdings/ai-company"
Repository = "https://github.com/light-speed-holdings/ai-company"
Issues = "https://github.com/light-speed-holdings/ai-company/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "ruff",
    "mypy",
    "types-PyYAML",
    "bandit",
    "safety",
    "pytest-asyncio",
    "build",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_company*"]

[project.scripts]
ai-company = "ai_company.cli.main:app"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Skip assert warnings
